been able to display the profile picture on the write something function

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -84,9 +84,7 @@
                         <div class="p-3">
                             <div class="d-flex align-items-center">
                                 <div class="me-2 pix-div">
-                                    <p
-                                        class="text-black rounded-circle bg-white d-flex align-items-center justify-content-center pix">
-                                        A</p>
+                                    <p id="show-profile-photo"></p>
                                 </div>
                                 <div class="w-100 rounded-pill post-box p-2 ps-3" onclick="openPostModal()">
                                     What's on your mind, <span id="user-name"></span>
