been able to display the comments, I just need to arrange it well

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar fixed-top navbar-expand-lg">
+    <nav class="navbar fixed-top navbar-expand-lg nav-color">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <a class="navbar-brand fb-logo-link" href="#">
                 <img src="../images/facebook-logo-2019.svg" alt="" class="fb-logo w-100">
