--- a/public/Profile/profile.html
+++ b/public/Profile/profile.html
@@ -97,7 +97,7 @@
             </div>
             <div class="w-100 d-flex align-items-center justify-content-center">
                 <div class="w-25 left">
-                    <div class="mt-5 bg-danger">
+                    <div class="mt-5">
                         <button class="btn btn-success" onclick="gotoHome()">Home</button>
                     </div>
                 </div>
