--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In</title>
+  <link rel="stylesheet" href="signin.css">
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -13,32 +14,39 @@
 </head>
 
 <body>
-  <main class="d-flex justify-content-center mt-5 w-100">
-    <form class="border w-50 p-4 border-primary">
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  <main class="position-relative">
+    <div class="position-absolute inner-div w-100 d-flex">
+      <div class="facebook me-5 mt-4">
+        <div class="w-100">
+          <img src="./images/facebook-logo.svg" alt="" class="w-50">
+        </div>
+        <div class="ps-2">
+          <h3 class="ps-4">Facebook helps you connect and share with the people in your life.</h3>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Password</label>
-        <input type="password" class="form-control" id="password">
+      <div class="sign-in">
+        <form class="shadow bg-white rounded w-100 p-4">
+          <div class="mb-3">
+            <input type="email" class="form-control ps-3 py-2 email-input" id="email" aria-describedby="emailHelp"
+              placeholder="Email address or phone number">
+          </div>
+          <div class="mb-3">
+            <input type="password" class="form-control ps-3 py-2" id="password" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-primary w-100 log-in-btn fs-5 fw-bold" onclick="signIn(event)">Log in</button>
+          <div class="w-100 text-center mt-3">
+            <span class="forgotten">Forgotten Password?</span class="mx-auto">
+          </div>
+          <hr class="w-100">
+          <div class="w-100 text-center">
+            <button class="btn text-white create-btn fw-bold" style="background-color: RGB(66 183 42);" onclick="gotoSignUpPage(event)">Create new account</button>
+          </div>
+        </form>
+        <div class="w-100 text-center create-page-text mt-3">
+          <span><span class="fw-bold">Create a Page</span> for a celebrity, brand or business.</span>
+        </div>
       </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-      </div>
-      <button type="submit" class="btn btn-primary" onclick="signIn(event)">Sign in</button>
-      <div class="d-flex align-items-center justify-content-center">
-        <hr class="w-50">
-        <span class="mx-3">or</span>
-        <hr class="w-50">
-      </div>
-      <button class="btn btn-danger">Sign in with google</button>
-      <div>
-        <p>Dont't have an account? <button class="btn btn-success" onclick="gotoSignUpPage(event)">Sign up here</button></p>
-      </div> 
-    </form>
+    </div>
   </main>
 
 
