--- a/public/SignUp/signUp.html
+++ b/public/SignUp/signUp.html
@@ -6,42 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Un</title>
+    <link rel="stylesheet" href="signup.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
-    <main class="d-flex justify-content-center mt-5 w-100">
-        <form class="border w-50 p-4 border-primary rounded">
-            <div class="mb-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="user-name" aria-describedby="emailHelp">
+    <main class="position-relative">
+        <div class="position-absolute inner-div w-100 d-flex">
+            <div class="facebook me-5 mt-4">
+                <div class="w-100">
+                    <img src="../images/facebook-logo.svg" alt="" class="w-50">
+                </div>
+                <div class="ps-2">
+                    <h3 class="ps-4">Facebook helps you connect and share with the people in your life.</h3>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <div class="sign-in">
+                <form class="shadow bg-white rounded w-100 p-4">
+                    <div class="mb-3">
+                        <input type="email" class="form-control ps-3 py-2 email-input" id="email"
+                            aria-describedby="emailHelp" placeholder="Email address or phone number">
+                    </div>
+                    <div class="mb-3">
+                        <input type="password" class="form-control ps-3 py-2" id="password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-primary w-100 log-in-btn fs-5 fw-bold"
+                        onclick="signIn(event)">Log in</button>
+                    <div class="w-100 text-center mt-3">
+                        <span class="forgotten">Forgotten Password?</span class="mx-auto">
+                    </div>
+                    <hr class="w-100">
+                    <div class="w-100 text-center">
+                        <button class="btn text-white create-btn fw-bold" style="background-color: RGB(66 183 42);"
+                            onclick="gotoSignUpPage(event)">Create new account</button>
+                    </div>
+                </form>
+                <div class="w-100 text-center create-page-text mt-3">
+                    <span><span class="fw-bold">Create a Page</span> for a celebrity, brand or business.</span>
+                </div>
             </div>
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password">
+        </div>
+        <div class="position-absolute modal-div w-100 d-flex align-items-center justify-content-center">
+            <div class="inner-modal pt-2 rounded shadow bg-white position-relative">
+                <div class="modal1 w-100 ps-3">
+                    <h1 class="mb-0">Sign Up</h1>
+                    <h6>It's quick and easy</h6>
+                    <div class="position-absolute top-0 end-0 pe-2">
+                        <i class="bi bi-x fs-2" onclick="gotoSignInPage(event)"></i>
+                    </div>
+                </div>
+                <hr class="w-100 mt-0 mb-3">
+                <form class="px-3 border-primary rounded">
+                    <div class="mb-3 d-flex">
+                        <input type="text" class="form-control me-3" style="width: 48%; background-color: #f5f6f7; border-color: #ccd0d5;" id="user-name" aria-describedby="emailHelp" placeholder="First name">
+                        <input type="text" class="form-control" style="width: 48%; background-color: #f5f6f7; border-color: #ccd0d5;" id="surname" aria-describedby="emailHelp" placeholder="Surname">
+                    </div>
+                    <div class="mb-3">
+                        <input type="text" class="form-control" style="background-color: #f5f6f7; border-color: #ccd0d5;" id="user-email" aria-describedby="emailHelp" placeholder="Mobile number or email address">
+                    </div>
+                    <div class="mb-3">
+                        <input type="password" class="form-control" style="background-color: #f5f6f7; border-color: #ccd0d5;" id="user-password" placeholder="New password">
+                    </div>
+                    <div class="w-100 text-center">
+                        <button type="submit" class="btn btn-primary px-5 fw-bold" onclick="signUp(event)">Sign Up</button>
+                    </div>
+                    <div class="d-flex align-items-center justify-content-center">
+                        <hr class="w-50">
+                        <span class="mx-3">or</span>
+                        <hr class="w-50">
+                    </div>
+                    <p>Already have an account? <button class="btn btn-success" onclick="gotoSignInPage(event)">Sign in here</button></p>
+        
+                </form>
             </div>
-            <div class="mb-3 form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary" onclick="signUp(event)">Sign Up</button>
-            <div class="d-flex align-items-center justify-content-center">
-                <hr class="w-50">
-                <span class="mx-3">or</span>
-                <hr class="w-50">
-            </div>
-            <button class="btn btn-danger">Sign up with google</button>
-            <p>Already have an account? <button class="btn btn-success" onclick="gotoSignInPage(event)">Sign in here</button></p>
-
-        </form>
+        </div>
+        
     </main>
 
 
