--- a/public/Profile/profile.html
+++ b/public/Profile/profile.html
@@ -37,7 +37,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="../Dashboard/dashboard.html">Home</a>
                         </li>
                         <li>
                             <button class="profile-btn rounded p-2 w-100 btn btn-success" onclick="gotoProfile()"><span
