added function to the see more and see less button on the left content bar respectively

--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -103,12 +103,14 @@
                             <div class="l-text">Watch</div>
                         </button>
                         <div class="see-more-divP">
-                            <button class="left-seemore-div d-flex align-items-center">
-                                <div class="arrow-down-div"><i class="fa-solid fa-angle-down arrow-down"></i></div>
-                                <div class="l-text">See more</div>
-                            </button>
+                            <div id="see-more">
+                                <button class="left-seemore-div d-flex align-items-center">
+                                    <div class="arrow-down-div"><i class="fa-solid fa-angle-down arrow-down"></i></div>
+                                    <div class="l-text">See more</div>
+                                </button>
+                            </div>
 
-                            <div class="see-more-div">
+                            <div class="see-more-div" id="see-less-div">
                                 <button class="left-section-div d-flex align-items-center">
                                     <div><img src="../images/facebook-watch.png" alt="" class="imgS"></div>
                                     <div class="l-text">Ad Center</div>
@@ -182,7 +184,7 @@
                                     <div class="l-text">Saved</div>
                                 </button>
                             </div>
-                            <div class="see-less-div">
+                            <div class="see-less-div" id="see-less-btn">
                                 <button class="left-seeless-div d-flex align-items-center">
                                     <div class="arrow-down-div"><i class="fa-solid fa-angle-up arrow-up"></i></div>
                                     <div class="l-text">See less</div>
@@ -218,37 +220,41 @@
                                 <div class="l-text">Employment Offers Worldwide</div>
                             </button>
                             <div class="see-more-divP">
-                                <button class="left-seemore-div d-flex align-items-center">
-                                    <div class="arrow-down-div"><i class="fa-solid fa-angle-down arrow-down"></i></div>
-                                    <div class="l-text">See more</div>
-                                </button>
-                                <div class="see-more-div">
-                                    <button class="left-section-div d-flex align-items-center">
-                                        <div><img src="../images/jobs.png" alt="" class="imgS"></div>
-                                        <div class="l-text">All Jobs Update Worldwide</div>
-                                    </button>
-                                    <button class="left-section-div d-flex align-items-center">
-                                        <div><img src="../images/job2.png" alt="" class="imgS"></div>
-                                        <div class="l-text">All Nationality Jobs</div>
-                                    </button>
-                                    <button class="left-section-div d-flex align-items-center">
-                                        <div><img src="../images/facebook-watch.png" alt="" class="imgS"></div>
-                                        <div class="l-text">Bossman concepts</div>
-                                    </button>
-                                    <button class="left-section-div d-flex align-items-center">
-                                        <div><img src="../images/candy-crush-png-10.png" alt="" class="imgS"></div>
-                                        <div class="l-text">Candy Crush Saga</div>
-                                    </button>
-                                    <button class="left-section-div d-flex align-items-center">
-                                        <div><img src="../images/employ.png" alt="" class="imgS"></div>
-                                        <div class="l-text">Employment Offers Worldwide</div>
+                                <div id="see-more-btn2">
+                                    <button class="left-seemore-div d-flex align-items-center">
+                                        <div class="arrow-down-div"><i class="fa-solid fa-angle-down arrow-down"></i></div>
+                                        <div class="l-text">See more</div>
                                     </button>
                                 </div>
-                                <div class="see-less-div">
-                                    <button class="left-seeless-div d-flex align-items-center">
-                                        <div class="arrow-down-div"><i class="fa-solid fa-angle-up arrow-up"></i></div>
-                                        <div class="l-text">See less</div>
-                                    </button>
+                                <div>
+                                    <div class="see-more-div" id="see-less-div-2">
+                                        <button class="left-section-div d-flex align-items-center">
+                                            <div><img src="../images/jobs.png" alt="" class="imgS"></div>
+                                            <div class="l-text">All Jobs Update Worldwide</div>
+                                        </button>
+                                        <button class="left-section-div d-flex align-items-center">
+                                            <div><img src="../images/job2.png" alt="" class="imgS"></div>
+                                            <div class="l-text">All Nationality Jobs</div>
+                                        </button>
+                                        <button class="left-section-div d-flex align-items-center">
+                                            <div><img src="../images/facebook-watch.png" alt="" class="imgS"></div>
+                                            <div class="l-text">Bossman concepts</div>
+                                        </button>
+                                        <button class="left-section-div d-flex align-items-center">
+                                            <div><img src="../images/candy-crush-png-10.png" alt="" class="imgS"></div>
+                                            <div class="l-text">Candy Crush Saga</div>
+                                        </button>
+                                        <button class="left-section-div d-flex align-items-center">
+                                            <div><img src="../images/jobs.png" alt="" class="imgS"></div>
+                                            <div class="l-text">Nationality Jobz Worldwide</div>
+                                        </button>
+                                    </div>
+                                    <div class="see-less-div" id="see-less-btn2">
+                                        <button class="left-seeless-div d-flex align-items-center">
+                                            <div class="arrow-down-div"><i class="fa-solid fa-angle-up arrow-up"></i></div>
+                                            <div class="l-text">See less</div>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
