--- a/public/Dashboard/dashboard.html
+++ b/public/Dashboard/dashboard.html
@@ -69,15 +69,14 @@
             </div>
         </div>
     </nav>
-    <main class="bg-danger">
+    <main class="">
         <div class="d-flex position-relative w-100">
             <div class="left overflow-auto">
                 <div class="mx-1 my-1">
                     <button class="profile-btn rounded p-2 w-100"><span></span></button>
                     <div class="left-container">
                         <button class="my-profile-div w-100 d-flex align-items-center" onclick="gotoProfile()">
-                            <div id="profile-pictureTag"><img src="../images/abbas-img.jpeg" alt=""
-                                    class="img rounded-circle"></div>
+                            <div id="profile-pictureTag"></div>
                             <div class="l-text" id="profile-name"></div>
                         </button>
                         <button class="friends-div">
